partman-lvm (58) UNRELEASED; urgency=low

  * Create function for locking devices holding a PV.

 -- Frans Pop <fjp@debian.org>  Mon, 10 Dec 2007 18:13:40 +0100

partman-lvm (57) unstable; urgency=low

  * Moved definitions.sh to ./lib/base.sh.
  * Move lvm_tools.sh to ./lib/lvm-base.sh.
  * Change priority to optional to allow dynamic loading by partman-base.
  * Add new function library lvm-remove.sh to support removing all LVM data
    from a device (moved from partman-auto, incl. corresponding templates).
    Reword the error template to better describe the reason we refuse to
    erase the LVM data automatically.
  * Requires partman-base (>= 114).

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * French (fr.po) by Christian Perrier
  * Japanese (ja.po) by Kenshi Muto
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Portuguese (pt.po) by Miguel Figueiredo
  * Russian (ru.po) by Yuri Kozlov
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Frans Pop <fjp@debian.org>  Tue, 11 Dec 2007 14:00:30 +0100

partman-lvm (56) unstable; urgency=low

  [ Frans Pop ]
  * Only check partition flags if we've not already determined the device is
    used for LVM.
  * Don't create label and partition for LVM volumes if they already have a
    partition. Needed to allow to use existing file systems on LVM volumes but
    additional changes will be needed for that to be properly supported.
    Closes: #451970.

  [ Max Vozeler ]
  * Replace code to commit partman changes to disk with call to commit_changes
    from partman-base (>= 113) and version the dependency accordingly.

  [ Updated translations ]
  * Belarusian (be.po) by Hleb Rubanau
  * Dzongkha (dz.po) by Jurmey Rabgay
  * Esperanto (eo.po) by Serge Leblanc
  * Korean (ko.po) by Sunjae Park
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ
  * Norwegian Bokmål (nb.po) by Hans Fredrik Nordhaug
  * Polish (pl.po) by Bartosz Fenski
  * Romanian (ro.po) by Eddy Petrișor
  * Slovak (sk.po) by Ivan Masár
