@@ -397,9 +397,14 @@ Template: partman-lvm/device_remove_lvm
 Type: boolean
 Default: false
 _Description: Remove existing logical volume data?
- The selected device already contains logical volumes and/or
- volume groups from a previous LVM installation, which must be removed
- from the disk before creating any partitions.
+ The selected device already contains the following LVM logical volumes,
+ volume groups and physical volumes which are about to be removed:
+ .
+ Logical volume(s) to be removed: ${LVTARGETS}
+ .
+ Volume group(s) to be removed: ${VGTARGETS}
+ .
+ Physical volume(s) to be removed: ${PVTARGETS}
  .
  Note that this will also permanently erase any data currently on the
  logical volumes.
