@@ -1,9 +1,38 @@
 . /lib/partman/lib/lvm-base.sh
 
+# List PVs to be removed to initialize a device
+remove_lvm_find_vgs() {
+	local realdev vg pvs
+	realdev="$1"
+	
+	# Check all VGs to see which PV needs removing
+	# BUGME: the greps in this loop should be properly bounded so they
+	#	 do not match on partial matches!
+	#        Except that we want partial matches for disks...
+	for vg in $(vg_list); do
+		pvs="$(vg_list_pvs $vg)"
+		
+		if ! $(echo "$pvs" | grep -q "$realdev"); then
+			continue
+		fi
+
+		# Make sure the VG doesn't span any other disks
+		if $(echo -n "$pvs" | grep -q -v "$realdev"); then
+			log-output -t partman-lvm vgs
+			db_input critical partman-lvm/device_remove_lvm_span || true
+			db_go || true
+			return 1
+		fi
+		echo "$vg"
+	done
+}
+
 # Wipes any traces of LVM from a disk
 # Normally called from a function that initializes a device
+# Note: if the device contains an empty PV, it will not be removed
 device_remove_lvm() {
-	local dev realdev vg pvs pv lv tmpdev restart
+	local dev realdev tmpdev restart
+	local pvs pv vgs vg lvs lv pvtext vgtext lvtext
 	dev="$1"
 	cd $dev
 
@@ -13,7 +42,33 @@ device_remove_lvm() {
 		return 0
 	fi
 
+	vgs="$(remove_lvm_find_vgs $realdev)" || return 1
+	[ "$vgs" ] || return 0
+
+	pvs=""
+	lvs=""
+	for vg in $vgs; do
+		pvs="${pvs:+$pvs$NL}$(vg_list_pvs $vg)"
+		lvs="${lvs:+$lvs$NL}$(vg_list_lvs $vg)"
+	done
+
 	# Ask for permission to erase LVM volumes 
+	lvtext=""
+	for lv in $lvs; do
+		lvtext="${lvtext:+$lvtext, }$lv"
+	done
+	vgtext=""
+	for vg in $vgs; do
+		vgtext="${vgtext:+$vgtext, }$vg"
+	done
+	pvtext=""
+	for pv in $pvs; do
+		pvtext="${pvtext:+$pvtext, }$pv"
+	done
+
+	db_subst partman-lvm/device_remove_lvm LVTARGETS "$lvtext"
+	db_subst partman-lvm/device_remove_lvm VGTARGETS "$vgtext"
+	db_subst partman-lvm/device_remove_lvm PVTARGETS "$pvtext"
 	db_input critical partman-lvm/device_remove_lvm
 	db_go || return 1
 	db_get partman-lvm/device_remove_lvm
@@ -21,39 +76,22 @@ device_remove_lvm() {
 		return 1
 	fi
 
-	# We need devicemapper support
+	# We need devicemapper support here
 	modprobe dm-mod >/dev/null 2>&1
 
-	# Check all VG's
-	# BUGME: the greps in this loop should be properly bounded so they
-	#	 do not match on partial matches!
-	#        Except that we want partial matches for disks...
-	for vg in $(vg_list); do
-		pvs=$(vg_list_pvs $vg)
-		
-		# Only deal with VG's on the selected disk
-		if ! $(echo "$pvs" | grep -q "$realdev"); then
-			continue
-		fi
-
-		# Make sure the VG don't span any other disks
-		if $(echo -n "$pvs" | grep -q -v "$realdev"); then
-			log-output -t partman-lvm vgs
-			db_input critical partman-lvm/device_remove_lvm_span || true
-			db_go || true
-			return 1
-		fi
-
-		# Remove LV's from the VG
+	for vg in $vgs; do
+		# Remove LVs from the VG
 		for lv in $(vg_list_lvs $vg); do
 			lv_delete $vg $lv
 		done
 
-		# Remove the VG and its PV's 
+		# Remove the VG
 		vg_delete $vg
-		for pv in $pvs; do
-			pv_delete $pv
-		done
+	done
+	# Remove the PVs and unlock the devices
+	for pv in $pvs; do
+		pv_delete $pv
+		partman_unlock_unit $pv
 	done
 
 	# Make sure that parted has no stale LVM info
