@@ -1,6 +1,10 @@
 partman-lvm (58) UNRELEASED; urgency=low
 
   * Create function for locking devices holding a PV.
+  * lvm-remove.sh: improve automatic removal of LVM data
+    - list LVM volumes to be removed; based on earlier work by David Härdeman
+    - a disk can contain multiple volume groups; make sure we remove them all
+    - when a physical volume is deleted, also unlock the device it was on
 
  -- Frans Pop <fjp@debian.org>  Mon, 10 Dec 2007 18:13:40 +0100
 
